// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar When dealing with an animated graph it renders consistently 1`] = `
<rect
  fill="#000 "
  height="0%"
  stroke="anything"
  width="100%"
  x="-39.2%"
  y="90%"
/>
`;

exports[`Bar When dealing with named data types When all values on the yAxis are negative it renders consistently with Placement set to Aligned 1`] = `
<rect
  fill="#000 "
  height="-Infinity%"
  stroke="anything"
  width="100%"
  x="-39.2%"
  y="Infinity%"
/>
`;

exports[`Bar When dealing with named data types When all values on the yAxis are negative it renders consistently with Placement set to Bucket 1`] = `
<rect
  fill="#000 "
  height="-Infinity%"
  stroke="anything"
  width="100%"
  x="-25.866666666666667%"
  y="Infinity%"
/>
`;

exports[`Bar When dealing with named data types When all values on the yAxis are negative it renders consistently with defaults 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-39.2%"
  y="50%"
/>
`;

exports[`Bar When dealing with named data types When all values on the yAxis are positive it renders consistently with Placement set to Aligned 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-39.2%"
  y="50%"
/>
`;

exports[`Bar When dealing with named data types When all values on the yAxis are positive it renders consistently with Placement set to Bucket 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-25.866666666666667%"
  y="50%"
/>
`;

exports[`Bar When dealing with named data types When all values on the yAxis are positive it renders consistently with defaults 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-39.2%"
  y="50%"
/>
`;

exports[`Bar When dealing with named data types When the yAxis spans positive and negative values it renders consistently with Placement set to Aligned 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-39.2%"
  y="50%"
/>
`;

exports[`Bar When dealing with named data types When the yAxis spans positive and negative values it renders consistently with Placement set to Bucket 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-25.866666666666667%"
  y="50%"
/>
`;

exports[`Bar When dealing with named data types When the yAxis spans positive and negative values it renders consistently with defaults 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-39.2%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are negative it renders consistently with Placement set to Aligned 1`] = `
<rect
  fill="#000 "
  height="-Infinity%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="Infinity%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are negative it renders consistently with Placement set to Aligned 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are negative it renders consistently with Placement set to Bucket 1`] = `
<rect
  fill="#000 "
  height="-Infinity%"
  stroke="anything"
  width="100%"
  x="-18.666666666666668%"
  y="Infinity%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are negative it renders consistently with Placement set to Bucket 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-18.666666666666668%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are negative it renders consistently with defaults 1`] = `
<rect
  fill="#000 "
  height="-Infinity%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="Infinity%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are negative it renders consistently with defaults 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are positive it renders consistently with Placement set to Aligned 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are positive it renders consistently with Placement set to Aligned 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are positive it renders consistently with Placement set to Bucket 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-18.666666666666668%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are positive it renders consistently with Placement set to Bucket 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-18.666666666666668%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are positive it renders consistently with defaults 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When all values on the yAxis are positive it renders consistently with defaults 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When the yAxis spans positive and negative values it renders consistently with Placement set to Aligned 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When the yAxis spans positive and negative values it renders consistently with Placement set to Aligned 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When the yAxis spans positive and negative values it renders consistently with Placement set to Bucket 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-18.666666666666668%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When the yAxis spans positive and negative values it renders consistently with Placement set to Bucket 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-18.666666666666668%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When the yAxis spans positive and negative values it renders consistently with defaults 1`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;

exports[`Bar When dealing with numeric data types When the yAxis spans positive and negative values it renders consistently with defaults 2`] = `
<rect
  fill="#000 "
  height="40%"
  stroke="anything"
  width="100%"
  x="-32%"
  y="50%"
/>
`;
